tz-local/resource/istio/sample/sample1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    run: nginx
spec:
  ports:
    - protocol: TCP
      name: http-80
      port: 80
      targetPort: 80
  selector:
    app: nginx
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx1-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/stz-redirect: "false"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: nginx1.drillquiz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
  tls:
    - hosts:
        - nginx1.drillquiz.com
      secretName: nginx1.istio-system-tls1

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx2-virtualservice
spec:
  gateways:
  - istio-gateway
  hosts:
  - nginx2.drillquiz.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nginx.default.svc.cluster.local
        port:
          number: 80

---

apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-proxy
  namespace: default
spec:
  type: ExternalName
  externalName: istio-ingressgateway.istio-system.svc.cluster.local
  ports:
  - name: http
    port: 880
    targetPort: 880
    protocol: TCP
  - name: https
    port: 8443
    targetPort: 8443
    protocol: TCP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx2-to-istio-proxy
  annotations:
#    kubernetes.io/ingress.class: istio
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: nginx2.drillquiz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway-proxy
            port:
              number: 880
  tls:
    - hosts:
        - nginx2.drillquiz.com
      secretName: nginx2.istio-system-tls1
